[package]
name = "symbologyl2"
description = "Symbology normalization and translation for listed US equities"
homepage = "https://github.com/onechronos/symbologyl2"
repository = "https://github.com/onechronos/symbologyl2"
version = "0.1.2"
license = "MIT"
readme = "README.md"
edition = "2024"
exclude = ["./test_data"]

[dependencies]
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
pest = "2.8.0"
pest_derive = "2.8.0"

[dev-dependencies]
csv = "1.3.1"
rusty-hook = "0.11.2"
